no ne kleinigkeit
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/trunk@356 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/doc/papers/3rd paper/3rd paper.tex
+++ b/doc/papers/3rd paper/3rd paper.tex
@@ -1107,7 +1107,7 @@ gelegt (siehe Abb. \ref{wss:AufbauWithDetailSecurity}).
 \end{figure}
 
 In diesem Aufbaumodell wurde nun der Security Agent detaillierter dargestellt.
-Extended Server übernimmt dabei die Kapselung des eigentlichen SOAP-Server
+Der Extended Server übernimmt dabei die Kapselung des eigentlichen SOAP-Server
 und leitet die Anfrage an die zwei Parser weiter, die damit entsprechend ihrer
 Funktion umgehen. Als letzter neuer Bestandteil übernimmt User Token Check die
 Authetifikation mit Hilfe der Datenbank und dem User Management.
@@ -1145,7 +1145,7 @@ darauf aufbauend jeweils eigene anwendungsspezifische Nachrichtenprotokolle
 und Schnittstellen definieren.
 
 Wie in \cite{RESTServices} dargelegt, hat es verschiedene Vorteile, 
-eine allgemein gültige Schnittstelle zu verwenden, unter anderem 
+eine allgemeingültige Schnittstelle zu verwenden, unter anderem 
 wird damit die Interoperabilität verbessert, da unabhängig von 
 einer speziellen Implementierung Aussagen über das zu erwartende 
 Verhalten getroffen werden können. In Bezug auf HTTP-REST ergeben 
