papers: conference version of the 3rd paper
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/trunk@366 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/doc/papers/3rd paper/3rd paper.tex
+++ b/doc/papers/3rd paper/3rd paper.tex
@@ -114,7 +114,7 @@ Christoph~Hartmann, Andreas~Meyer und Sebastian~Böttner
 }% <-this % stops a space
 % 
 % The paper headers
-\markboth{Seminar Konzepte und Methoden der Web-Programmierung 2005/2006}{Web Service Toolkit für PHP5}
+\markboth{Free and Open Source Software Conference 2006}{Web Service Toolkit für PHP5}
 
 % make the title area
 \maketitle
