added help and summary only switch
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/branches/transition@466 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/components/CodeTools/TODO
+++ b/components/CodeTools/TODO
@@ -1,2 +1,3 @@
-- build a web service on top of this tools
+   -   build a web service on top of this tools
 [DONE] CodeAnalyzer has to be enhanced by a php.ini to prevent execution of any code
+   -   find a way to show feedback information on current progress on cmd-line
